# prisme

./: .gitignore  .pre-commit-config.yaml  LICENSE  STACK_INFO.md  constraints.txt  pyproject.toml  requirements.lock.txt  requirements.txt  setup.py
.github/: README.md
.github/workflows/: auto-populate-pr.yml  ci.yml  dependency-review.yml
src/helpers/: console_factory.py
src/prisme/: __init__.py  base.py  benchmark.py  cli.py  runner.py
src/prisme/configs/: __init__.py  example.yaml
src/prisme/helpers/: __init__.py
src/prisme/io/: loader.py
src/prisme/tasks/: depth_estimation.py  hybridnets.py  object_detection.py  panoptic_segmentation.py  pose_estimation.py  semantic_segmentation.py  surface_normals.py  yolo_detection.py  yolo_segmentation.py
src/prisme/viz/: tiler.py
tests/: test_add.py
