[project]
name = "prisme"
version = "0.1.0"
description = "A unified computer vision inference library — one input, multiple perspectives."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    # Core
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",

    # Config
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",

    # HuggingFace (SegFormer, Mask2Former, DepthAnything, ViTPose-B)
    "transformers>=4.40.0",   # ViTPose added in 4.40
    "huggingface-hub>=0.20.0",
    "supervision>=0.20.0",
    "rfdetr>=1.5.0",
    "timm==0.5.4",            # backbone dep for several HF vision models

    # Pose estimation detector
    "ultralytics>=8.0.0",     # YOLOv8n person detector in PoseEstimationTask

    # Console / UI
    "rich>=13.0.0",

    # Benchmark (CPU RAM tracking) — soft dependency, gracefully absent
    "psutil>=5.9.0",

    # HybridsNet
    "prefetch_generator>=1.0.0",
    "webcolors>=25.0.0",
    "pretrainedmodels>=0.7.0",
    "efficientnet_pytorch>=0.7.1",

]

[project.scripts]
prisme = "prisme.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prisme"]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "apps", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "S", "D", "PLR"]
extend-ignore = [
    "E203",   # Black-compatible slice formatting
    "D203",   # Google style: no blank line before class (keep D211)
    "D212",   # Google style: multi-line summary on second line (keep D213)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100", "D101", "D102",  # No docstring requirements in tests
    "S101",                  # allow assert
    "S602",                  # shell=True in subprocess (tests only)
    "PLR2004",               # Magic values in assertions are normal
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
# Type checking
ignore_missing_imports = true
no_error_summary = true
pretty = true
install_types = true
files = "src,apps,tests"

[tool.bandit]
# Security static analysis
targets = ["src", "apps"]
confidence-level = "medium"
quiet = true

[tool.yamllint]
# YAML linter config for docker/configs etc.
extends = "default"
rules.line-length.max = 120
rules.document-start = false

[tool.prettier]
# Optional formatting for Markdown/JSON/YAML
single-quote = true
trailing-comma = "all"
print-width = 88
